--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
+
     <div id="index">
-      <img src="resources/images/the-flatiron-building.jpg" alt="Flatiron Building">
       <h1>Broadway Design</h1>
       <p><a class="nav" href="#index">Home</a></p>
       <p><a class="nav" href="#about">About</a></p>
@@ -15,36 +15,50 @@
       <p><a class="nav" href="#team">Team</a></p>
       <p><a class="nav" href="#contact">Contact</a></p>
     </div>
+
     <div id="about">
       <h2>Our Process</h2>
-      <img src="resources/images/identify.svg" alt="Identify">
+      <img src="resources/identify.svg" alt="Identify">
       <h3>Identify</h3>
       <p>We focus on the most important details.</p>
-        <img src="resources/images/understand.svg" alt="Understand">
+        <img src="resources/understand.svg" alt="Understand">
       <h3>Understand</h3>
       <p>We study our projects inside out.</p>
-        <img src="resources/images/execute.svg" alt="Execute">
+        <img src="resources/execute.svg" alt="Execute">
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
+
+    <div id="tagline">
+      <h2>Designed in New York</h2>
+    </div>
+
     <div id="work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
     </div>
+
     <div id="team">
-      <p></p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
     </div>
+
     <div id="contact">
-      <h
+      <h3>Contact</h3>
       <p>Phone: (555)-555-5555</p>
-      <p></p>
-      <p></p>
+      <p>Email: test@example.com</p>
+      <p>Twitter: @test</p>
     </div>
+
     <div id="footer">
-      <p>&copy; Broadway 2017</p>
-      <p><a class="nav" href="#index">Home</a></p>
-      <p><a class="nav" href="#about">About</a></p>
-      <p><a class="nav" href="#work">Work</a></p>
-      <p><a class="nav" href="#team">Team</a></p>
-      <p><a class="nav" href="#contact">Contact</a></p>
+      <p>&copy; Broadway 2017
+      <a class="nav" href="#index">Home</a>
+      <a class="nav" href="#about">About</a>
+      <a class="nav" href="#work">Work</a>
+      <a class="nav" href="#team">Team</a>
+      <a class="nav" href="#contact">Contact</a>
+      </p>
     </div>
+
   </body>
 </html>
